# SUA_Examples

./: .gitignore  README.md
ivi/C++/Demos/: cuda_signal_processing_simple.cu  readme.md
ivi/C++/Examples/: AWG_Checkout.cpp  AWG_wfmPlay.cpp  AWG_wfmQIPlay.cpp  AWG_wfmSequencePlay.cpp  CMakeLists.txt  DAQ_Checkout.cpp  DAQ_RingBuffer.cpp  DAQ_RingBufferQI.cpp  DAQ_Stream.cpp  DAQ_read_RingBuffer.cpp  DAQ_workModeSwitch.cpp  SUATools_getInfo.cpp  SUATools_resourceDB.cpp  SUATools_run.cpp  SUATools_stop.cpp  SUATools_sync.cpp  readme.md  tool_config.h
ivi/C++/Examples/file/conf/: ivi_1210XXXX-00.json  ivi_2302XXXX-00.json  ivi_3302XXXX-80.json  ivi_4901XXXX-80.json
ivi/C++/Examples/file/conf/config.d/: 3301XXXX-40.json
ivi/C++/Examples/lib/: cs_over_pc.lib
ivi/Python/Examples/: AWG_wfmPlay.py  AWG_wfmSequencePlay.py  DAQ_RingBuffer.py  DAQ_RingBufferQI.py  DAQ_workModeSwitch.py  README.md  SUATools_getInfo.py  SUATools_resourceDB.py  SUATools_run.py  SUATools_stop.py  SUATools_sync.py  tool_config.py
ivi/Python/Tools/: logging.py  utils.py
ivi/Python/common/: model.py  param_memory.py  process_worker.py  utils.py
ivi/Python/conf/: icd.json  ivi.json  resourceDB.json  resourceDBSim.json
ivi/Python/conf/config.d/: 2302XXXX-00.json  4901XXXX-40.json  6201XXXX-04.json
ivi/Python/core/: client.py  http_middleware.py  http_server.py  service_status.py  static_server.py  tcp_server.py
ivi/Python/ivi/: __init__.py  iviATTR.py  iviVAL.py
ivi/Python/ivi/windows/: NSUKit.lib  ivi.lib  iviBase.lib  iviBase.pyd  iviBase.pyi  iviDigitizer.lib  iviDigitizer.pyd  iviDigitizer.pyi  iviFgen.lib  iviFgen.pyd  iviFgen.pyi  iviPXIMainBoard.lib  iviPXIMainBoard.pyd  iviPXIMainBoard.pyi  iviSyncATrig.lib  iviSyncATrig.pyd  iviSyncATrig.pyi
ivi/win10-C++/Examples/: AWG_DAQ_Combined.cpp  AWG_wfmPlay.cpp  CMakeLists.txt  DAQ_read_RingBuffer.cpp  RF.cpp  getBoardInfo.cpp  tool_config.h  version.h.in
ivi/win10-C++/Examples/file/conf/: config.yaml  ivi_4901XXXX-22.json  ivi_4901XXXX-40.json  ivi_6201XXXX-04.json  ivi_ee16XXXX-00.json
ivi/win10-C++/Examples/file/conf/config.d/: 3302XXXX-80.json  4901XXXX-04.json  4901XXXX-22.json
ivi/win10-C++/Examples/lib/: NSUKit.lib  cs_over_pc.lib  ivi.lib
scpi/: requirements.txt
scpi/Demos/: AWG_demo.ipynb  DAQ_demo.ipynb
scpi/Examples/: AWG_DUC_continuation.ipynb  AWG_continuation.ipynb  AWG_continuation_fromDigitizer.ipynb  AWG_continuation_fromxlex.ipynb  AWG_sequence.ipynb  AWG_sequence_fromfile.ipynb  AWG_wait_for_trig.ipynb  Digitizer_DDC.ipynb  Digitizer_RingBuffer.ipynb  Digitizer_Stream.ipynb  Digitizer_level.ipynb  Digitizer_quan.ipynb
scpi/matlab/Examples/: AWG_continuation.m  AWG_continuation_fromDigitizer.m  AWG_continuation_fromxlex.m  AWG_sequence.m  AWG_sequence_fromfile.m  AWG_wait_for_trig.m  Digitizer_DDC.m  Digitizer_RingBuffer.m  Digitizer_Stream.m  Digitizer_level.m  Digitizer_quan.m  TCP_UltraBVC.m  is_valid_ip.m  logical_to_string.m  main_advanced.m  run_UltraBVC_control.m  show_wave.m  show_wave_FFT.m  upload_nswave_http.m  upload_waveform_http.m
scpi/matlab/Tools/: AWG_createWave.m  BVC_Tools.m  CommonUtils.m  ConfigManager.m  DeviceManager.m  SignalAnalyzer.m  SignalGenerator.m  SignalParams.m
scpi/matlab/matlab_TCP/: TCP_UltraBVC.m  run_UltraBVC_control.m
scpi/python/Demos/: demo.ipynb
scpi/python/Examples/: AWG_continuation.ipynb  AWG_continuation_fromDigitizer.ipynb  AWG_continuation_fromxlex.ipynb  AWG_sequence.ipynb  AWG_sequence_fromfile.ipynb  AWG_wait_for_trig.ipynb  Digitizer_DDC.ipynb  Digitizer_RingBuffer.ipynb  Digitizer_Stream.ipynb  Digitizer_level.ipynb  Digitizer_quan.ipynb
scpi/python/Tools/: AWG_createWave.ipynb  BVC_Tools.ipynb
